# mcp-context-engine

./: .editorconfig  .env.example  .gitignore  LANGCHAIN_INTEGRATION.md  README.md  alembic.ini  config_env.py  logger.py  main.py  mcp_engine.py  pyproject.toml
.github/workflows/: ruff.yml
alembic/: README  env.py
alembic/versions/: 0c99887d9312_initial_migration.py
database/: db_client.py
database/models/: __init__.py  __utils__.py  child_counter.py  comment.py  config.py  dependency.py  event.py  issue.py  label.py
database/services/: __init__.py  issue_query_service.py  issue_service.py
tools/: __init__.py  comment.py  dependency.py  event.py  issue.py  label.py  query_tools.py
